--- a/pom.xml
+++ b/pom.xml
@@ -7,4 +7,10 @@
     <groupId>ru.vladigeras</groupId>
     <artifactId>warehouse</artifactId>
     <version>1.0</version>
+
+    <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+        <java.version>11</java.version>
+    </properties>
 </project>
