--- a/Yakovleva/Calculator_of_products/nbproject/project.properties
+++ b/Yakovleva/Calculator_of_products/nbproject/project.properties
@@ -54,7 +54,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=calculator_of_products.Calculator_of_products
+main.class=calculator_of_products.Interface
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
